# purrticle

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MyClass.cpp  MyClass.h  main.cpp
app/: CMakeLists.txt  Client.cpp  Client.h  ClientApp.cpp  ClientApp.h  Server.cpp  Server.h  ServerApp.cpp  ServerApp.h  Viewer.cpp  Viewer.h  main.cpp
cmake/: CodeCoverage.cmake
core/: CMakeLists.txt  Client.cpp  Client.h  MyClass.h  Scene.cpp  Scene.h  Server.cpp  Server.h  Simulator.cpp  Simulator.h  Vector2.cpp  Vector2.h
core/schema/: scene.fbs
src/: CMakeLists.txt  MyClass.cpp  Vector2.cpp  main.cpp
tests/: CMakeLists.txt  MyClassTest.cpp  Vector2Test.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.ts  renderer.ts
